--- a/src/style/header.css
+++ b/src/style/header.css
@@ -22,6 +22,10 @@
 .header-cart {
     height: 6rem;
     width: 6rem;
-    background: none;
+    border-radius: 50%;
+    background-color: var(--blue-black);
     border: none;
+}
+.cartIcon {
+    height: 3.5rem;
 }
