--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,6 +6,7 @@
     --white: #FAFAFA;
     --blue-black: #142F43;
     --gray: #656262;
+    --gray-m: #F4F4F4;
     --font-primary: 'Roboto Slab', serif;
     --letter-spacing: 0.1rem;
 }
