--- a/src/style/item.css
+++ b/src/style/item.css
@@ -5,6 +5,7 @@
     justify-content: center;
     justify-items: center;
     padding: 2rem 0;
+    min-height: 90vh;
 }
 .item {
     width: 280px;
