--- a/src/style/style.css
+++ b/src/style/style.css
@@ -20,3 +20,14 @@ html {
     font-family: var(--font-primary);
     letter-spacing: var(--letter-spacing);
 }
+footer {
+    display: grid;
+    align-items: center;
+    height: 6rem;
+    background-color: var(--blue-black);
+}
+footer p {
+    font-size: 1.8rem;
+    text-align: center;
+    color: var(--gray-m);
+}
