--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,6 +5,7 @@
     --primary-h: #f73455;
     --white: #FAFAFA;
     --blue-black: #142F43;
+    --blue-black-h: #00182a;
     --gray: #656262;
     --gray-m: #F4F4F4;
     --font-primary: 'Roboto Slab', serif;
