--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -64,7 +64,10 @@
     border: 1px solid var(--blue-black);
     cursor: pointer;
 }
-
+.buttons-menu button:hover {
+    border: solid 0.3rem var(--blue-black);
+    box-shadow: 0px 4px 7px 2px rgb(0 0 0 / 25%);
+}
 .buttons-menu button:active {
     color: var(--white);
     border: 2px solid var(--primary-h);
