--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,6 +3,7 @@
     --secondary: #FFAB4C;
     --secondary-m: #FFDCB5;
     --primary-h: #f73455;
+    --primary-m: #ffd4dd;
     --white: #FAFAFA;
     --blue-black: #142F43;
     --blue-black-h: #00182a;
