--- a/src/style/sing-up.css
+++ b/src/style/sing-up.css
@@ -1,3 +1,7 @@
+.hero-title a {
+    color:var(--white);
+    text-decoration: none;
+}
 .sing-up {
     display: flex;
     flex-direction: column;
