--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,6 +2,7 @@
     --primary: #FF5F7E;
     --secondary: #FFAB4C;
     --secondary-m: #FFDCB5;
+    --link: #d22b48;
     --primary-h: #f73455;
     --primary-m: #ffd4dd;
     --white: #FAFAFA;
