--- a/src/style/cart.css
+++ b/src/style/cart.css
@@ -10,7 +10,7 @@
     align-items: center;
     row-gap: 1rem;
     padding: 4rem 1rem 30vh 1rem;
-    background-color: var(--white);
+    background-color: var(--gray-m);
     overflow-y: auto;
     font-size: 1.8rem;
     border-left: 3px solid var(--blue-black);
@@ -70,22 +70,24 @@
     font-size:1.82rem;
     border-radius: 1rem;
     letter-spacing: var(--letter-spacing);
-    /* color: var(--white); */
     font-weight: bold;
-    border: none;
 }
 .end-button {
-    background-color: var(--primary-h);
-    color: var(--blue-black-h);
+    color: var(--blue-black);
+    background-color: var(--white);
+    border: 2px solid var(--primary-h);
 }
 .end-button:hover {
     cursor: pointer;
-    background-color: var(--primary);
+    border: 4px solid var(--primary-h);
+    box-shadow: 0px 4px 7px 2px rgb(0 0 0 / 25%);
 }
 .return-button {
-    background-color: var(--blue-black);
-    color: var(--white);
+    color: var(--blue-black);
+    background-color: var(--white);
+    border: 2px solid var(--blue-black);
 }
 .return-button:hover {
-    background-color: var(--gray);
+    border: 4px solid var(--blue-black);
+    box-shadow: 0px 4px 7px 2px rgb(0 0 0 / 25%);
 }
