sign  up and payment end...

--- a/src/style/payment.css
+++ b/src/style/payment.css
@@ -11,6 +11,10 @@
     font-size: 2.5rem;
     color: var(--white);
 }
+.header a {
+    color: var(--white);
+    text-decoration: none;
+}
 .details {
     display: flex;
     flex-direction: column;
