--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -80,13 +80,13 @@
 .account-button:hover, .cart-button:hover {
     border: solid 0.3rem var(--blue-black);
 }
-.account-button, .login-unlogin-button, .category-button {
+.account-button, .login-button, .unlogin-button, .category-button {
     width: 29rem;
     height: 4.3rem;
     font-size: 1.8rem;
     border-radius: 5px;
 }
-.account-button, .login-unlogin-button {
+.account-button, .login-button, .unlogin-button {
     background-color: var(--primary);
 }
 .category-button {
