💄 change the height of body in login and change-password

--- a/src/style/change-password.css
+++ b/src/style/change-password.css
@@ -1,7 +1,7 @@
 body {
     display: grid;
     justify-items: center;
-    height: 100vh;
+    min-height: 100vh;
     background: rgb(255,171,76);
     background: linear-gradient(0deg, rgba(255,171,76,1) 0%, rgba(255,95,126,1) 76%);
 }
