:art: changes in the exports and little changes in menu of css

--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -5,6 +5,7 @@
     left: -100vw;
     height: 100vh;
     width: 100vw;
+    max-width: 350px;
     display: flex;
     flex-direction: column;
     align-items: center;
