--- a/src/style/cart.css
+++ b/src/style/cart.css
@@ -5,6 +5,7 @@
     right: -100vw;
     height: 100vh;
     width: 100vw;
+    max-width: 360px;
     display: flex;
     flex-direction: column;
     align-items: center;
