:sparkles: add banner and a temporal loading text

--- a/src/style/item.css
+++ b/src/style/item.css
@@ -1,3 +1,7 @@
+.items-loading {
+    position: absolute;
+    font-size: 5rem;
+}
 .items {
     display: grid;
     grid-template-columns: repeat(auto-fill, 28rem);
