--- a/src/style/banner.css
+++ b/src/style/banner.css
@@ -7,9 +7,9 @@
     align-items: center;
     padding: 0 3rem;
     height: 252px;
+    width: 100%;
 }
 .banner__text {
-    z-index: 2;
     font-size: 4.5rem;
 }
 .banner__img {
